SUBDIRS = tuple\
	  stack\
	  point\
	  htable\
	  uset\
	  quad\
	  hex\
	  tet\
	  tri\
	  math\
	  mesh\
	  space\
	  dofmap\
	  field\
	  mean_field\
	  mean_sqr_field\
	  gather_scatter\
	  krylov\
	  bc\
	  signal\
	  jobctrl\
	  device\
	  device_math\
	  mathops\
	  device_mathops\
	  octree\
	  vector\
	  scratch_registry

TESTS = device/device_test\
	tuple/tuple_test\
	stack/stack_test\
	point/point_test\
	htable/htable_test\
	uset/uset_test\
	quad/quad_test\
	hex/hex_test\
	tet/tet_test\
	tri/tri_test\
	math/math_test\
	mesh/mesh_test\
	space/space_test\
	dofmap/dofmap_test\
	field/field_test\
	mean_field/mean_field_test\
	mean_sqr_field/mean_sqr_field_test\
	gather_scatter/gather_scatter_test\
	krylov/krylov_test\
	bc/bc_test\
	signal/signal_test\
	jobctrl/jobctrl_test\
	device_math/device_math_test\
	mathops/mathops_test\
	device_mathops/device_mathops_test\
    octree/octree_test\
	vector/vector_test\
	scratch_registry/scratch_registry_test

# Note we need to list .pf and runner scripts manually
EXTRA_DIST = \
	mesh/mesh_parallel.pf\
	quad/quad.pf\
	gather_scatter/gather_scatter_parallel.pf\
	krylov/krylov.pf\
	hex/hex.pf\
	tet/tet.pf\
	tri/tri.pf\
	bc/bc.pf\
	tuple/tuple.pf\
	point/point.pf\
	signal/signal.pf\
	space/space.pf\
	jobctrl/jobctrl_parallel.pf\
	dofmap/dofmap_parallel.pf\
	field/field_parallel.pf\
	mean_field/mean_field_parallel.pf\
	mean_sqr_field/mean_sqr_field_parallel.pf\
	device/device.pf\
	uset/uset_i4.pf\
	uset/uset_r8.pf\
	uset/uset_i8.pf\
	math/math_parallel.pf\
	stack/stack_r8.pf\
	stack/stack_i4t4.pf\
	stack/stack_i4.pf\
	stack/stack_i4t2.pf\
	stack/stack_i4r8t2.pf\
	stack/stack_2i4r8t3.pf\
	stack/stack_i8.pf\
	stack/stack_nq.pf\
	stack/stack_nh.pf\
	stack/stack_pt.pf\
	htable/htable_i4t2.pf\
	htable/htable_i8.pf\
	htable/htable_pt.pf\
	htable/htable_r8.pf\
	htable/htable_i4.pf\
	htable/htable_i4t4.pf\
	mathops/mathops.pf\
	device_mathops/device_mathops.pf\
	device_math/device_math_parallel.pf\
	mesh/mesh_test\
	gather_scatter/gather_scatter_test\
	dofmap/dofmap_test\
	jobctrl/jobctrl_test\
	math/math_test\
	field/field_test\
	mean_field/mean_field_test\
	mean_sqr_field/mean_sqr_field_test\
	device_math/device_math_test\
	octree/octree.pf\
	vector/vector_parallel.pf\
	scratch_registry/test_scratch_registry.pf
